fix: double scrollbar

--- a/packages/client/src/sass/components/_globals.scss
+++ b/packages/client/src/sass/components/_globals.scss
@@ -155,3 +155,7 @@ button:active {
 .header-links:visited {
   color: c.$lightColor !important;
 }
+
+html {
+  overflow: hidden;
+}
